# edgeai-tidl-tools

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  enable_backward_compatibility.sh  entrypoint.sh  requirements_j7.txt  requirements_pc.txt  setup.sh  setup_env.sh  setup_target_device.sh  update_firmware_and_lib.sh  update_target.sh
examples/: CMakeLists.txt
examples/cmake/: common.cmake  cross_compile.cmake  cross_compile_am62.cmake  cross_compile_j7.cmake
examples/jupyter_notebooks/: README.md  benchmark_accuracy.ipynb  custom-model-onnx.ipynb  custom-model-tfl-debug.ipynb  custom-model-tfl.ipynb  custom-model-tvm-dlr.ipynb  debug_tips.ipynb  evm-console-log.ipynb  human-pose-estimation-onnx.ipynb  launch_notebook.sh  lidar-3dod-onnx.ipynb  notebook_evm.sh  notebook_pc.sh  vcls-dlr.ipynb  vcls-hr.ipynb  vcls-onnx-arm.ipynb  vcls-onnx.ipynb  vcls-tfl-arm.ipynb  vcls-tfl.ipynb  vdet-dlr.ipynb  vdet-onnx.ipynb  vdet-tfl.ipynb  vseg-dlr.ipynb  vseg-onnx.ipynb  vseg-tfl.ipynb
examples/jupyter_notebooks/colab/: infer_ort.ipynb  infer_tflite.ipynb  ti_edgeai_tidl_tools_am62a.ipynb  ti_edgeai_tidl_tools_am68a.ipynb  ti_edgeai_tidl_tools_am69a.ipynb  ti_edgeai_tidl_tools_tda4vm.ipynb  tidlrt_tools.ipynb
examples/jupyter_notebooks/configs/: accuracy_infer_on_j7.yaml
examples/jupyter_notebooks/sample-images/: imagenet-labels.txt
examples/jupyter_notebooks/sample-images/pose/: street_walk_4.jfif
examples/jupyter_notebooks/sample-lidar/: lidar_to_image.txt
examples/jupyter_notebooks/scripts/: hpe_group.py  hpe_postprocess.py  utils.py  utils_lidar.py
examples/models/prototxt/mmdet/: efficientdet_effb0_bifpn_8xb16-crop512-300e_lite_20240612_model.prototxt  retinanet_regnetx-800mf_fpn_bgr_lite_512x512_20200908_model.prototxt  ssd_mobilenetp5_lite_320x320_20230404_model.prototxt  ssd_mobilenetv2_fpn_lite_512x512_20201110_model.prototxt  ssd_mobilenetv2_lite_512x512_20201214_model.prototxt  ssd_mobilenetv2_lite_qat-p2_512x512_20201217_model.prototxt  ssd_regnetx-1.6gf_fpn_bgr_lite_768x768_20200923_model.prototxt  ssd_regnetx-200mf_fpn_bgr_lite_320x320_20201010_model.prototxt  ssd_regnetx-800mf_fpn_bgr_lite_512x512_20200919_model.prototxt  ssd_resnet_fpn_512x512_20200730_model.prototxt  yolov3_d53_relu_416x416_20210117_model.prototxt  yolov3_regnetx-1.6gf_bgr_lite_512x512_20210202_model.prototxt  yolox_m_lite_640x640_20220228_model.prototxt  yolox_nano_lite_416x416_20220214_model.prototxt  yolox_pico_lite_320x320_20230410_model.prototxt  yolox_s_lite_640x640_20220221_model.prototxt
examples/models/prototxt/yolo/: yolov5_nano-v61_lite_640x640_20240329_model.prototxt  yolov7_large_lite_640x640_20240119_model.prototxt  yolov7_tiny_lite_640x640_20230830_model.prototxt  yolov8_small_lite_640x640_20231117_model.prototxt  yolox_small_lite_640x640_20240319_model.prototxt  yolox_tiny_lite_416x416_20231127_model.prototxt
examples/osrt_cpp/: README.md  cpp_config.h
examples/osrt_cpp/advanced_examples/: README.md
examples/osrt_cpp/advanced_examples/ort/: ort_priority_scheduling.cpp
examples/osrt_cpp/advanced_examples/tfl/: tfl_priority_scheduling.cpp  tfl_priority_scheduling.h
examples/osrt_cpp/advanced_examples/utils/: CMakeLists.txt
examples/osrt_cpp/advanced_exmples/: README.md
examples/osrt_cpp/advanced_exmples/ort/: CMakeLists.txt  onnx_main.cpp  onnx_main.h  ort_priority_scheduling.cpp  ort_priority_scheduling.h
examples/osrt_cpp/advanced_exmples/testing/: CMakeLists.txt
examples/osrt_cpp/advanced_exmples/tfl/: CMakeLists.txt  tfl_main.cpp  tfl_main.h  tfl_main_fps_calc.cpp  tfl_main_op_tensor_val.cpp  tfl_priority_scheduling.cpp  tfl_priority_scheduling.h
examples/osrt_cpp/advanced_exmples/utils/license/: LICENSE.txt
examples/osrt_cpp/dlr/: CMakeLists.txt  classification.cpp  dlr_main.cpp  dlr_main.h
examples/osrt_cpp/ort/: CMakeLists.txt  main.cpp  onnx_main.cpp  onnx_main.h  validator.cpp  validator.h
examples/osrt_cpp/post_process/: CMakeLists.txt  post_process.cpp  post_process.h
examples/osrt_cpp/pre_process/: CMakeLists.txt  pre_process.cpp  pre_process.h
examples/osrt_cpp/tfl/: CMakeLists.txt  classification.cpp  classification.h  od.cpp  od.h  segmentation.cpp  segmentation.h  tfl_config.h  tfl_main.cpp  tfl_main.h
examples/osrt_cpp/tfl/post_process/: CMakeLists.txt  tfl_post_process.cpp  tfl_post_process.h
examples/osrt_cpp/tfl/pre_process/: CMakeLists.txt  tfl_pre_process.cpp  tfl_pre_process.h
examples/osrt_cpp/utils/: CMakeLists.txt
examples/osrt_cpp/utils/dl_inferer/: CMakeLists.txt
examples/osrt_cpp/utils/include/: arg_parsing.h  edgeai_classnames.h  model_info.h  pbPlots.hpp  supportLib.hpp  ti_logger.h  utility_functs.h
examples/osrt_cpp/utils/src/: arg_parsing.cpp  edgeai_classnames.cpp  model_info.cpp  pbPlots.cpp  supportLib.cpp  ti_logger.cpp  utility_functs.cpp
examples/osrt_python/: README.md  __init__.py  common_utils.py  config_utils.py  model_configs.py  param_template.yaml  params_base.py
examples/osrt_python/advanced_examples/RGB_YUV_model_conversion/: README.md  common_utils.py  model_configs.py
examples/osrt_python/benchmark_utils/: __init__.py  attr_dict.py  config_utils.py  misc_utils.py
examples/osrt_python/common/: __init__.py  attr_dict.py  config_utils.py  dataset_utils.py  image_utils.py  postprocess_utils.py
examples/osrt_python/config_utils/: __init__.py  model_config.py  model_config_utils.py  params_base.py  postprocess_utils.py
examples/osrt_python/ort/: onnxrt_ep.py  utils.py
examples/osrt_python/tfl/: tflrt_delegate.py  utils.py
examples/osrt_python/tvm_dlr/: dlr-inference-example.py  dlr_inference_example.py  tvm-compilation-onnx-example.py  tvm-compilation-tflite-example.py  tvm_compilation_mxnet_example.py  tvm_compilation_onnx_example.py  tvm_compilation_tflite_example.py  tvm_compilation_timm_example.py  utils.py
examples/tidlrt_cpp/: CMakeLists.txt  README.md  classification.cpp  classification.h
examples/tidlrt_cpp/advanced_examples/: CMakeLists.txt  README.md  tidlrt_priority_scheduling.cpp  tidlrt_priority_scheduling_utils.cpp  tidlrt_priority_scheduling_utils.h
(+420 files in other folders)
